@@ -365,12 +365,16 @@ function getFloorplanObjectPeerTable(){
 				$('#floorplanObj'+floorplanObjID).click();
 			}));
 			
-			$('#floorplanObjectTable').DataTable({
+			$('#floorplanObjectTable').on( 'init.dt', function () {
+				console.log( 'Table initialisation complete: '+new Date().getTime() );
+			}).DataTable({
 				'paging': false,
 				'info': false,
 				'scrollY': '200px',
 				'scrollCollapse': true
 			});
+			
+			$('#floorplanObjectTable_wrapper').children(':first').children(':first').remove();
 		}
 		
 		// App node selection
